cli/tests/testdata/run/fetch_async_error_stack.ts
await fetch("https://nonexistent.deno.land/");
